Revert "CRM-20179 - jstree upgrade and other js performance improvements"

--- a/css/contactSummary.css
+++ b/css/contactSummary.css
@@ -349,7 +349,14 @@ div#crm-contact-thumbnail {
   max-height: 500px;
   overflow: auto;
 }
-
+#tagtree,
+#tagtree li.highlighted ul {
+  background-color: white;
+}
+#tagtree li.highlighted,
+#tagtree li.highlighted-child.jstree-closed {
+  background-color: #fefcb0;
+}
 #tagtree li {
   margin-top: 5px;
 }
@@ -358,11 +365,8 @@ div#crm-contact-thumbnail {
   position: relative;
   top: -3px;
 }
-#tagtree .jstree-disabled {
-  cursor: not-allowed;
-}
-#tagtree .jstree-disabled > .jstree-checkbox {
-  opacity: .2;
+#tagtree input {
+  margin: 0;
 }
 
 #tagGroup table .label {
