--- a/css/civicrmNavigation.css
+++ b/css/civicrmNavigation.css
@@ -127,8 +127,7 @@ li.menu-separator{
   line-height: 0; /* for ie */
   margin: 2px 0;
 }
-#civicrm-menu .crm-logo-sm,
-.crm-container .crm-logo-sm {
+#civicrm-menu .crm-logo-sm {
   background: url('../i/item_sprites.png') no-repeat scroll -80px -16px;
   display: inline-block;
   width: 16px;
