--- a/css/searchForm.css
+++ b/css/searchForm.css
@@ -55,3 +55,8 @@
   color: #2A71B4;
   font-weight: normal;
 }
+
+/* CRM-20945 Remove underline to show active pager */
+.crm-container #alpha-filter a.active {
+  border-bottom: none;
+}
