CRM-21195 - Menu markup tweaks

--- a/css/civicrmNavigation.css
+++ b/css/civicrmNavigation.css
@@ -120,7 +120,7 @@ img.menu-item-arrow{
   right: 4px;
   top: 8px;
 }
-.menu-item-icon {
+#civicrm-menu i {
   margin-right: 5px;
 }
 li.menu-separator{
